added documentation for existing "mongo-hints-by-namespace" setting